Change database connection to remote server
Updated the database connection string to use a remote server.

--- a/appsettings.json
+++ b/appsettings.json
@@ -5,8 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "ConnectionStrings": {
-    "DefaultConnection": "Server=localhost;Database=ProjetoAutorLivroDb;User=root;Password=senha123;"
-  },
+ "ConnectionStrings": {
+  "DefaultConnection": "Server=20.241.181.58;Port=3306;Database=ProjetoAutorLivroDb;User=root;Password=senha123;"
+},
   "AllowedHosts": "*"
 }
