--- a/appsettings.json
+++ b/appsettings.json
@@ -6,7 +6,7 @@
     }
   },
  "ConnectionStrings": {
-  "DefaultConnection": "Server=20.241.181.58;Port=3306;Database=ProjetoAutorLivroDb;User=root;Password=senha123;"
+  "DefaultConnection": "Server=20.241.181.58;Port=3306;Database=ProjetoAutorLivroDb;User=root;Password=Senha123!;"
 },
   "AllowedHosts": "*"
 }
